[Fix] Teleport 버튼 (#24)
* feat: 모바일 대응

* feat:  hide scrollbar

* feat: 외곽 클릭 시 teleport button hide

--- a/app/globals.css
+++ b/app/globals.css
@@ -149,3 +149,12 @@
   z-index: 50;
   width: 10rem;
 }
+
+.hide-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
